add home, contact, and basic programs grid

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
 
     <div id="primary" class="content-area">
+      <img class='home-banner' src='assets/homebanner.jpg'/>
       <div class='title'>
         <span class='title-name'>Michael Chekhov</span>
         <span class='title-red'>Acting</span>
