--- a/programs.html
+++ b/programs.html
@@ -23,7 +23,32 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        Programs page in progress...
+        <div class='programs-grid'>
+          <li class='program-card'>
+            <div class='program-card-title single-line'>PROGRAMS</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title double-line'>ART OF THE ACTOR</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title single-line'>WORKSHOPS</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title triple-line'>CHEKHOV PERFORMANCE LAB</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title single-line'>ARTIST SALON</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title double-line'>PRIVATE INSTRUCTION</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title double-line'>MCAS AT LOTUS BAY</div>
+          </li>
+          <li class='program-card'>
+            <div class='program-card-title double-line'>BEYOND NEW YORK</div>
+          </li>
+        </div>
       </div>
     </div>
   </body>
