add footer, make programs page switch on click, fix nav bar styling, add readme

--- a/philosophy.html
+++ b/philosophy.html
@@ -26,5 +26,29 @@
         Philosophy page in progress...
       </div>
     </div>
+    <footer>
+      <section>
+        <span>
+          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+        </span>
+        <span>
+          <a href=''>Subscribe</a> to our email newsletter
+        </span>
+      </section>
+      <section>
+        <a href='mailto:info@michaelchekhovactingstudio.com'>
+          <img src="assets/email.png" />
+        </a>
+        <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/facebook.png" />
+        </a>
+        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/instagram.png" />
+        </a>
+        <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
+          <img src="assets/twitter.png" />
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
