--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <div class="page-title">INQUIRE</div>
+        <div class='page-title contact-title'>INQUIRE</div>
 
         <section class='contact-section'>
           <span>Art of the Actor Training /
@@ -75,5 +75,29 @@
         </section>
       </div>
     </div>
+    <footer>
+      <section>
+        <span>
+          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+        </span>
+        <span>
+          <a href=''>Subscribe</a> to our email newsletter
+        </span>
+      </section>
+      <section>
+        <a href='mailto:info@michaelchekhovactingstudio.com'>
+          <img src="assets/email.png" />
+        </a>
+        <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/facebook.png" />
+        </a>
+        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/instagram.png" />
+        </a>
+        <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
+          <img src="assets/twitter.png" />
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
