--- a/programs.html
+++ b/programs.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
+    <script src='assets/script.js' charset="utf-8"></script>
   </head>
   <body>
     <header>
@@ -23,33 +24,69 @@
 
     <div id="primary" class="content-area">
       <div class='page-body'>
-        <div class='programs-grid'>
-          <li class='program-card'>
-            <div class='program-card-title single-line'>PROGRAMS</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title double-line'>ART OF THE ACTOR</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title single-line'>WORKSHOPS</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title triple-line'>CHEKHOV PERFORMANCE LAB</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title single-line'>ARTIST SALON</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title double-line'>PRIVATE INSTRUCTION</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title double-line'>MCAS AT LOTUS BAY</div>
-          </li>
-          <li class='program-card'>
-            <div class='program-card-title double-line'>BEYOND NEW YORK</div>
-          </li>
+        <div class='programs-container'>
+          <div class='programs-grid'>
+            <li class='program-card clear'>
+              <img class='programs-img' src='assets/programs.png'/>
+              <div class='program-card-title'>PROGRAMS</div>
+            </li>
+            <li class='program-card black'>
+              <div class='program-card-title'>ART OF THE ACTOR</div>
+            </li>
+            <li class='program-card gold'>
+              <div class='program-card-title'>WORKSHOPS</div>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>CHEKHOV PERFORMANCE LAB</div>
+            </li>
+            <li class='program-card gray'>
+              <div class='program-card-title'>ARTIST SALON</div>
+            </li>
+            <li class='program-card black'>
+              <div class='program-card-title'>PRIVATE INSTRUCTION</div>
+            </li>
+            <li class='program-card red'>
+              <div class='program-card-title'>MCAS AT LOTUS BAY</div>
+            </li>
+            <li class='program-card gold'>
+              <div class='program-card-title'>BEYOND NEW YORK</div>
+            </li>
+          </div>
+          <div class='programs-info'>
+            <div class='program-description'>
+              <!-- EMMA, LENARD, ETC: Edit the program descriptions in 'assets/script.js' -->
+              <div class='description-placeholder'>Click on a program to learn more.</div>
+            </div>
+          </div>
+          <div class='programs-calendar'>
+            CALENDAR WILL GO HERE
+          </div>
         </div>
       </div>
     </div>
+    <footer>
+      <section>
+        <span>
+          <a href=''>138 W 15th St, 1st floor New York, New York 10011</a>
+        </span>
+        <span>
+          <a href=''>Subscribe</a> to our email newsletter
+        </span>
+      </section>
+      <section>
+        <a href='mailto:info@michaelchekhovactingstudio.com'>
+          <img src="assets/email.png" />
+        </a>
+        <a href='https://www.facebook.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/facebook.png" />
+        </a>
+        <a href='https://http://www.instagram.com/chekhovstudionyc/' target='_blank'>
+          <img src="assets/instagram.png" />
+        </a>
+        <a href='https://twitter.com/chekhovstudioNY' target='_blank'>
+          <img src="assets/twitter.png" />
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
