make homepage styling more flexible

--- a/programs.html
+++ b/programs.html
@@ -30,25 +30,25 @@
               <img class='programs-img' src='assets/programs.png'/>
               <div class='program-card-title'>PROGRAMS</div>
             </li>
-            <li class='program-card black'>
+            <li class='program-card red'>
               <div class='program-card-title'>ART OF THE ACTOR</div>
             </li>
             <li class='program-card gold'>
               <div class='program-card-title'>WORKSHOPS</div>
             </li>
-            <li class='program-card red'>
+            <li class='program-card gray'>
               <div class='program-card-title'>CHEKHOV PERFORMANCE LAB</div>
             </li>
-            <li class='program-card gray'>
+            <li class='program-card red'>
               <div class='program-card-title'>ARTIST SALON</div>
             </li>
             <li class='program-card black'>
               <div class='program-card-title'>PRIVATE INSTRUCTION</div>
             </li>
-            <li class='program-card red'>
+            <li class='program-card gold'>
               <div class='program-card-title'>MCAS AT LOTUS BAY</div>
             </li>
-            <li class='program-card gold'>
+            <li class='program-card red'>
               <div class='program-card-title'>BEYOND NEW YORK</div>
             </li>
           </div>
@@ -59,7 +59,8 @@
             </div>
           </div>
           <div class='programs-calendar'>
-            CALENDAR WILL GO HERE
+            <iframe src="https://calendar.google.com/calendar/embed?src=o2gi198lh4khmcm213a6kvq4lk%40group.calendar.google.com&ctz=America/New_York"
+            style="border: 0" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
           </div>
         </div>
       </div>
