update philosophy page

--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     </header>
 
     <div id="primary" class="content-area">
-      <div class='page-body'>
-        <div class='page-title contact-title'>INQUIRE</div>
+      <div class='page-body page-body-narrow'>
+        <h2 class='page-title'>INQUIRE</h2>
 
         <section class='contact-section'>
           <span>Art of the Actor Training /
