update studio page

--- a/philosophy.html
+++ b/philosophy.html
@@ -25,7 +25,7 @@
       <div class='page-body page-body-narrow'>
         <h2 class='page-title'>PHILOSOPHY</h2>
 
-        <section class='phil-section phil-section-gray'>
+        <section class='page-section page-section-gray'>
           <h3 class='section-header'>MICHAEL CHEKHOV’S TECHNIQUE</h3>
           <p>
             Michael Chekhov developed an acting technique, a ‘psycho-physical
@@ -59,7 +59,7 @@
           </p>
         </section>
 
-        <section class='phil-section'>
+        <section class='page-section'>
           <p class='phil-quote'>
             "All you experience in the course of your life, all you observe
             and think, all that makes you happy or unhappy, all your regrets
@@ -78,7 +78,7 @@
           </p>
         </section>
 
-        <section class='phil-section phil-section-gray'>
+        <section class='page-section page-section-gray'>
           <p>
             Michael Chekhov, Nephew of the famous writer and dramatist Anton Chekhov,
             was an ideal pupil of Constantine Stanislavsky and considered by
@@ -93,13 +93,13 @@
         </section>
 
         <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
         </section>
 
-        <section class='phil-section phil-section-gray'>
+        <section class='page-section page-section-gray'>
           <h3 class='section-header'>ORIGINS</h3>
           <p>
             All approaches to acting in America and Europe stem from the
@@ -118,17 +118,17 @@
         </section>
 
         <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
         </section>
 
-        <section class='phil-section phil-section-clear'>
+        <section class='page-section page-section-clear'>
           <p>
-            <span class='phil-bio-name'>
+            <strong class='phil-bio-name'>
               Constantine Stanislavsky:
-            </span>
+            </strong>
             <span>
               Twentieth Century Russian Actor and Director, contributed
               tremendously to the process of acting as we understand and
@@ -136,18 +136,18 @@
             </span>
           </p>
           <p>
-            <span class='phil-bio-name'>
+            <strong class='phil-bio-name'>
               Michael Chekhov:
-            </span>
+            </strong>
             <span>
               An outstanding Russian actor, director and teacher of acting who
               lived and worked in Russia, in different European countries, and in the USA.
             </span>
           </p>
           <p>
-            <span class='phil-bio-name'>
+            <strong class='phil-bio-name'>
               Yevgeny Vakhtangov:
-            </span>
+            </strong>
             <span>
               Actor, teacher who died as a young and very promising director,
               and whose name is associated with an existing School and a
@@ -155,9 +155,9 @@
             </span>
           </p>
           <p>
-            <span class='phil-bio-name'>
+            <strong class='phil-bio-name'>
               Vsevolod Meyerhold:
-            </span>
+            </strong>
             <span>
               Actor, teacher who became the premier Socialist Director of a
               new form of theater in Soviet Russia until he was persecuted
@@ -166,7 +166,7 @@
           </p>
         </section>
 
-        <section class='phil-section phil-section-gray'>
+        <section class='page-section page-section-gray'>
           <p>
             These artists helped the naturalistic theater flourish until
             they understood, along with Stanislavsky, that actors were
@@ -183,13 +183,13 @@
         </section>
 
         <section class='phil-grid phil-image-grid'>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg'></img>
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
         </section>
 
-        <section class='phil-section phil-section-gray'>
+        <section class='page-section page-section-gray'>
           <h3 class='section-header'>MOVING BEYOND NATURALISM</h3>
           <p>
             An article in the NY Times, "Dispensing With Dogma in the
@@ -213,15 +213,15 @@
           </p>
         </section>
 
-        <section class='phil-section phil-grid phil-book-grid'>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
-          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg'></img>
+        <section class='page-section phil-grid phil-book-grid'>
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
+          <img src='https://i.pinimg.com/736x/72/93/16/729316e27e33cd0e329cf99a16dd3ddb--labrador-puppies-labrador-retrievers.jpg' />
         </section>
       </div>
     </div>
