--- a/studio.html
+++ b/studio.html
@@ -22,8 +22,87 @@
     </header>
 
     <div id="primary" class="content-area">
-      <div class='page-body'>
-        Studio page in progress...
+      <div class='page-body page-body-narrow'>
+        <h2 class='page-title'>STUDIO</h2>
+
+        <section class='page-section page-section-gray'>
+          <h3 class='section-header'>MICHAEL CHEKHOV’S TECHNIQUE</h3>
+          <p>
+            Welcome to the Michael Chekhov Acting Studio, home to trainings
+            and workshops based in the work of Michael Chekhov and Clowning
+            for Actors since 1996, in New York City.
+          </p>
+          <p>
+            Text from Lenard to go here
+          </p>
+
+          <div class='group'>
+            <div>Sincerely,</div>
+            <div>Lenard Petit {signature script}</div>
+            <div>Artistic Director</div>
+          </div>
+        </section>
+
+        <section class='page-section video-grid'>
+          <div>video here</div>
+          <div>
+            Lenard has developed the work of Michael Chekhov in a practical
+            and imaginative way for actor’s clearly translating the technique
+            into something easy to use for actors today. His approach is
+            experienced in his teaching and expressed in his writing. The
+            Michael Chekhov Handbook, for the Actor can be purchased here.
+            Additionally a few articles* by Lenard are included here for you–gratis!
+          </div>
+        </section>
+
+        <nav class='page-section'>
+          <li class='page-nav-item'>
+            <label>LENARD PETIT</label>
+            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          </li>
+          <li class='page-nav-item'>
+            <label>FACULTY</label>
+            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          </li>
+          <li class='page-nav-item'>
+            <label>FRIENDS OF THE STUDIO</label>
+            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+          </li>
+        </nav>
+
+        <section class='page-section'>
+          <h3 class='section-header'>TESTIMONIALS</h3>
+          <p>
+            "This work has transformed me as an actor. It allows me to
+            create without boundaries and is incredibly fun. I've never
+            felt a sense of play as I do when using the Chekhov technique."
+            - Sara Nedwick, Actor
+          </p>
+          <p>
+            "It is a fun, playful, non-judgmental environment where actors
+            can learn a physical acting technique that greatly engages their
+            imagination and energizes their body." - Doug Lory, Actor
+          </p>
+          <p>
+            “The work feels like play, it exercises my focus and teaches
+            me to trust my own instincts. In conjunction with the Alexander
+            technique this work makes me aware of energy and how I can direct
+            it, utilize it and work with it.” -Christiane Seidel, Actor
+          </p>
+          <p>
+            “Mr. Lenard Petit is the real deal! During class, he is always
+            calm, cool and collected. When he is teaching or sharing you
+            see his passion, his love in the work.” - Michael Semosh, Actor
+          </p>
+          <p>
+            “I really appreciate the time taken with each student to ask
+            questions, check-in, and process what is occurring for us as we
+            encounter the work.” - Anna Dart, Actor
+          </p>
+          <p>
+            "My imagination and play is coming back to life!" - Jessica Savage, Actor
+          </p>
+        </section>
       </div>
     </div>
     <footer>
