add correct images

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             </section>
           </div>
           <div class='contact-grid-item'>
-            <img class='contact-diagram' src='assets/diagram.png'/>
+            <img class='contact-diagram' src='assets/diagram.jpeg'/>
           </div>
         </div>
       </div>
