--- a/studio.html
+++ b/studio.html
@@ -67,15 +67,15 @@
         <nav class='page-section'>
           <li class='page-nav-item'>
             <label>LENARD PETIT</label>
-            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+            <img src='assets/lenard.jpeg' />
           </li>
           <li class='page-nav-item'>
             <label>FACULTY</label>
-            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+            <img src='assets/faculty.jpeg' />
           </li>
           <li class='page-nav-item'>
             <label>FRIENDS OF THE STUDIO</label>
-            <img src='https://i.pinimg.com/736x/4e/31/4f/4e314fe8a09e99a57f774a5be20153f1--golden-retriever-puppies-golden-retrievers.jpg' />
+            <img src='assets/friends.jpeg' />
           </li>
         </nav>
 
@@ -90,16 +90,6 @@
             <div class='studio-quote-source'>
               - Sara Nedwick, Actor
             </div>
-          </p>
-          <p>
-            <em>
-              "It is a fun, playful, non-judgmental environment where actors
-              can learn a physical acting technique that greatly engages their
-              imagination and energizes their body."
-            </em>
-          <div class='studio-quote-source'>
-            - Doug Lory, Actor
-          </div>
           </p>
           <p>
             <em>
@@ -134,7 +124,7 @@
           </p>
           <p>
             <em>
-              "My imagination and play is coming back to life!"
+              "My imagination and sense of play are coming back to life!"
             </em>
             <div class='studio-quote-source'>
               - Jessica Savage, Actor
