--- a/studio.html
+++ b/studio.html
@@ -41,7 +41,7 @@
         </section>
 
         <section class='page-section video-grid'>
-          <div>video here</div>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/FvyWGmb1wCQ?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <div>
             Lenard has developed the work of Michael Chekhov in a practical
             and imaginative way for actor’s clearly translating the technique
