add map of friends

--- a/friends.html
+++ b/friends.html
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <link rel='stylesheet' href='assets/master.css' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='assets/map.js'></script>
   </head>
   <body>
     <header>
@@ -34,7 +37,11 @@
       <div class='page-body'>
         <h2 class='page-title'>FRIENDS</h2>
 
-        
+        <div className='map-container'>
+          <div id='map'></div>
+        </div>
+
+
       </div>
     </div>
     <footer>
